--- a/AnimatorExample/AnimatorExample/Base.lproj/Main.storyboard
+++ b/AnimatorExample/AnimatorExample/Base.lproj/Main.storyboard
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -38,14 +39,33 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Select Language :" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lg0-GA-ccK">
+                                <rect key="frame" x="66" y="167" width="136.5" height="23.5"/>
+                                <fontDescription key="fontDescription" name="Avenir-Roman" family="Avenir" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kga-XT-H9G">
+                                <rect key="frame" x="208" y="163" width="100" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="FYa-sD-YwU"/>
+                                    <constraint firstAttribute="height" constant="30" id="kJt-Su-2Mn"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="17"/>
+                                <state key="normal" title="English"/>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="FdV-z4-aDN" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="-60" id="NKF-Nk-y7Y"/>
                             <constraint firstItem="RHR-pT-m12" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" constant="-40" id="QqB-qT-Yyw"/>
+                            <constraint firstItem="kga-XT-H9G" firstAttribute="leading" secondItem="lg0-GA-ccK" secondAttribute="trailing" constant="6" id="Y20-Wt-hQA"/>
+                            <constraint firstItem="lg0-GA-ccK" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="50" id="ZxQ-Fm-N4t"/>
                             <constraint firstItem="FdV-z4-aDN" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="cEq-BR-LJH"/>
                             <constraint firstItem="RHR-pT-m12" firstAttribute="top" secondItem="FdV-z4-aDN" secondAttribute="bottom" constant="15" id="lwy-6w-GMO"/>
+                            <constraint firstItem="FdV-z4-aDN" firstAttribute="top" secondItem="kga-XT-H9G" secondAttribute="bottom" constant="45.5" id="ndZ-Q1-C8Y"/>
                             <constraint firstItem="RHR-pT-m12" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="uuA-SU-Sdq"/>
+                            <constraint firstItem="lg0-GA-ccK" firstAttribute="baseline" secondItem="kga-XT-H9G" secondAttribute="baseline" id="yNL-VZ-yCA"/>
                         </constraints>
                     </view>
                 </viewController>
