Updated example app

--- a/AnimatorExample/AnimatorExample/Base.lproj/Main.storyboard
+++ b/AnimatorExample/AnimatorExample/Base.lproj/Main.storyboard
@@ -45,10 +45,10 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kga-XT-H9G">
-                                <rect key="frame" x="208" y="163" width="100" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kga-XT-H9G">
+                                <rect key="frame" x="208" y="163" width="170" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="100" id="FYa-sD-YwU"/>
+                                    <constraint firstAttribute="width" constant="170" id="FYa-sD-YwU"/>
                                     <constraint firstAttribute="height" constant="30" id="kJt-Su-2Mn"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="17"/>
